--- a/conf/distro/ohga-x11.conf
+++ b/conf/distro/ohga-x11.conf
@@ -10,3 +10,6 @@ DISTRO_FEATURES_remove = "wayland"
 
 # These are X11 specific
 DISTRO_FEATURES_append = " x11"
+
+DISTRO_VERSION = "4.9.87-1.0.x"
+
