--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,6 +5,6 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "rtx-arm"
-BBFILE_PATTERN_rtx-arm = "^${LAYERDIR}/"
-BBFILE_PRIORITY_rtx-arm = "6"
+BBFILE_COLLECTIONS += "meta-rtx-arm"
+BBFILE_PATTERN_meta-rtx-arm = "^${LAYERDIR}/"
+BBFILE_PRIORITY_meta-rtx-arm = "6"
