--- a/conf/machine/imx6q-ohga.conf
+++ b/conf/machine/imx6q-ohga.conf
@@ -13,22 +13,21 @@ MACHINE_FEATURES_append = " optee"
 PREFERRED_PROVIDER_u-boot = "u-boot-rtx"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-rtx"
 PREFERRED_PROVIDER_virtual/bootloader_mx6 = "u-boot-rtx"
-PREFERRED_VERSION_u-boot-imx = "2015.04"
+PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-rtx"
+PREFERRED_VERSION_u-boot-rtx = "2020.04"
 UBOOT_MAKE_TARGET = "u-boot.imx"
 UBOOT_SUFFIX = "imx"
 UBOOT_PADDING = "2"
 UBOOT_CONFIG ??= "pitx"
-UBOOT_CONFIG[pitx] = "rtx_pitx_mx6q_nanya1g_dtb_rtx_all_linux_defconfig"
+UBOOT_CONFIG[pitx] = "rtx_pitxP_mx6q_nanya1g_dtb_rtx_all_linux_defconfig"
 
 # kernel
 PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-rtx"
-PREFERRED_PROVIDER_virtual/kernel_mx6ul = "linux-rtx"
-PREFERRED_PROVIDER_virtual/kernel_mx7 = "linux-rtx"
 PREFERRED_PROVIDER_virtual/kernel = "linux-rtx"
-PREFERRED_VERSION_linux-rtx_mx6 = "4.9.87"
+SERIAL_CONSOLE = "115200 ttymxc1"
 KERNEL_IMAGETYPE = "uImage"
 KERNEL_DEVICETREE = "rtx-imx6q-pitx-b21.dtb"
-SERIAL_CONSOLE = "115200 ttymxc1"
+PLATFORM_FLAVOR_imx6q-ohga   = "mx6qsabresd"
 
 MACHINE_FIRMWARE_append_mx6 = " linux-firmware-ath6k"
 
