--- a/conf/distro/ohga-x11.conf
+++ b/conf/distro/ohga-x11.conf
@@ -1,4 +1,4 @@
-# i.MX DISTRO for X11 with no wayland
+# i.MX DISTRO for the FrameBuffer graphical backend.
 
 include conf/distro/include/fsl-imx-base.inc
 include conf/distro/include/fsl-imx-preferred-env.inc
@@ -6,10 +6,5 @@ include conf/distro/include/fsl-imx-preferred-env.inc
 DISTRO = "ohga-x11"
 
 # Remove conflicting backends.
-DISTRO_FEATURES_remove = "wayland"
-
-# These are X11 specific
-DISTRO_FEATURES_append = " x11"
-
-DISTRO_VERSION = "4.9.87-1.0.x"
+DISTRO_FEATURES_remove = "x11 wayland directfb "
 
