--- a/conf/rtx.conf
+++ b/conf/rtx.conf
@@ -1,6 +1,6 @@
 MACHINE ??= 'imx6q-ohga'
-DISTRO ?= 'ohga-x11'
-PACKAGE_CLASSES ?= "package_rpm"
+DISTRO ?= 'fsl-imx-xwayland'
+PACKAGE_CLASSES ?= 'package_rpm'
 EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 USER_CLASSES ?= "buildstats image-mklibs image-prelink"
 PATCHRESOLVE = "noop"
@@ -13,16 +13,12 @@ BB_DISKMON_DIRS ??= "\
     ABORT,${DL_DIR},100M,1K \
     ABORT,${SSTATE_DIR},100M,1K \
     ABORT,/tmp,10M,1K"
-PACKAGECONFIG_append_pn-qemu-native = " sdl"
-PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
+PACKAGECONFIG_append_pn-qemu-system-native = " sdl"
 CONF_VERSION = "1"
 
 DL_DIR ?= "${BSPDIR}/downloads/"
 ACCEPT_FSL_EULA = "1"
 
-IMAGE_INSTALL_append = \
-	"${@bb.utils.contains('DISTRO_FEATURES', 'wayland', ' chromium-ozone-wayland libexif', \
-		bb.utils.contains('DISTRO_FEATURES',     'x11', ' chromium-x11 libexif', '', d), d)}"
-LICENSE_FLAGS_WHITELIST = \
-	"${@bb.utils.contains('DISTRO_FEATURES', 'wayland', 'commercial', \
-		bb.utils.contains('DISTRO_FEATURES',     'x11', 'commercial', '', d), d)}"
+# Switch to Debian packaging and include package-management in the image
+PACKAGE_CLASSES = "package_deb"
+EXTRA_IMAGE_FEATURES += "package-management"
