update efm32cmd. modify lteRSSI.sh. modify .sleep.gyro. add srt libsrtp ffmpeg.

--- a/tool/rtx.conf
+++ b/tool/rtx.conf
@@ -22,3 +22,5 @@ IMAGE_INSTALL_append = " apache2 php php-cli php-modphp"
 
 DL_DIR ?= "${BSPDIR}/downloads/"
 ACCEPT_FSL_EULA = "1"
+
+LICENSE_FLAGS_WHITELIST += " commercial"
