update efm32cmd. add e2fsprogs configure e2fsprogs-tune2fs e2fsprogs-badblocks e2fsprogs-resize2fs. add resizefs. add eraseuboot.

--- a/conf/machine/imx8mm_cse.conf
+++ b/conf/machine/imx8mm_cse.conf
@@ -50,7 +50,7 @@ IMAGE_BOOTLOADER = "imx-boot-rtx"
 
 IMAGE_ROOTFS_ALIGNMENT_mx8 = "65536"
 BOOT_SPACE = "65536"
-IMAGE_ROOTFS_SIZE = "3145728"
+# IMAGE_ROOTFS_SIZE = "3145728"
 IMAGE_OVERHEAD_FACTOR="1.0"
 
 LOADADDR = ""
