modify resizefs.sh. modify fstab. add openssh-sftp openssh-sftp-server tftp-hpa-server tftp-hpa vsftpd. add busybox tftp_blocksize.cfg.

--- a/tool/rtx.conf
+++ b/tool/rtx.conf
@@ -18,7 +18,7 @@ PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 CONF_VERSION = "1"
 
 PACKAGECONFIG_append_pn-php = " apache2"
-IMAGE_INSTALL_append = " apache2 php php-cli php-modphp"
+IMAGE_INSTALL_append = " apache2 php php-cli php-modphp openssh-sftp openssh-sftp-server tftp-hpa-server"
 
 DL_DIR ?= "${BSPDIR}/downloads/"
 ACCEPT_FSL_EULA = "1"
