add meta-java to bblayers.conf. add curl jq openjdk-8.

--- a/tool/rtx.conf
+++ b/tool/rtx.conf
@@ -24,3 +24,15 @@ DL_DIR ?= "${BSPDIR}/downloads/"
 ACCEPT_FSL_EULA = "1"
 
 LICENSE_FLAGS_WHITELIST += " commercial"
+
+# Possible provider: cacao-initial-native and jamvm-initial-native
+
+PREFERRED_PROVIDER_virtual/java-initial-native = "cacao-initial-native"
+
+# Possible provider: cacao-native and jamvm-native
+
+PREFERRED_PROVIDER_virtual/java-native = "cacao-native"
+
+# Optional since there is only one provider for now
+
+PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
